--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
                 <div class="container">
                     <h2 class="tasks-command-title">Чем мы занимаемся</h2>
                         <ul class="tasks-images list">
-                            <li class="tasks-images-item"><img class="gap" src="./images/tasks/box1.jpeg" alt="разрабочик создет програмный код на компьютере" width="370"></li>
+                            <li class="tasks-images-item"><img class="gap" src="./images/tasks/box1.jpeg" alt="разрабочик создет програмный код на компьютере" width="370">
+                            </li>
                             <li class="tasks-images-item"><img class="gap" src="./images/tasks/box2.jpeg" alt="визуализация адаптации отображения приложения на смартфоне" width="370"></li>
                             <li class="tasks-images-item"><img class="gap" src="./images/tasks/box3.jpeg" alt="работа с выбором цвета на дисплее планшета" width="370"></li>
                         </ul>
