--- a/index.html
+++ b/index.html
@@ -102,9 +102,20 @@
                     <h2 class="tasks-command-title">Чем мы занимаемся</h2>
                         <ul class="tasks-images list">
                             <li class="tasks-images-item"><img class="gap" src="./images/tasks/box1.jpeg" alt="разрабочик создет програмный код на компьютере" width="370">
+                                <div class="tasks-text">
+                                    <p class="tasks-text-item">Десктопные приложения</p>
+                                </div>
                             </li>
-                            <li class="tasks-images-item"><img class="gap" src="./images/tasks/box2.jpeg" alt="визуализация адаптации отображения приложения на смартфоне" width="370"></li>
-                            <li class="tasks-images-item"><img class="gap" src="./images/tasks/box3.jpeg" alt="работа с выбором цвета на дисплее планшета" width="370"></li>
+                            <li class="tasks-images-item"><img class="gap" src="./images/tasks/box2.jpeg" alt="визуализация адаптации отображения приложения на смартфоне" width="370">
+                                <div class="tasks-text">
+                                    <p class="tasks-text-item">Мобильные приложения</p>
+                                </div>
+                            </li>
+                            <li class="tasks-images-item"><img class="gap" src="./images/tasks/box3.jpeg" alt="работа с выбором цвета на дисплее планшета" width="370">
+                                <div class="tasks-text">
+                                    <p class="tasks-text-item">Дизайнерские решения</p>
+                                </div>
+                            </li>
                         </ul>
                 </div>
             </section>
