--- a/portfolio.html
+++ b/portfolio.html
@@ -61,8 +61,11 @@
                 <h2 class="visually-hidden">projects</h2>
                     <ul class="thumb-list list">
                         <li class="thumb">
-                            <a href="" class="thumb-link link"><img class="thumb-image" src="./images/port/img-0.jpeg" alt="наши специалисты">
-                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            <a href="" class="thumb-link link">
+                                <div class="thumb-box">
+                                    <img class="thumb-image" src="./images/port/img-0.jpeg" alt="наши специалисты">
+                                    <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="thumb-text">
                                     <h3>Технокряк</h3>
                                     <p>Веб-сайт</p>
@@ -70,8 +73,11 @@
                             </a>
                         </li>
                         <li class="thumb">
-                            <a href="" class="thumb-link link"><img class="thumb-image" src="./images/port/img-1.jpeg" alt="игра в баскетбол">
-                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            <a href="" class="thumb-link link">
+                                <div class="thumb-box">
+                                    <img class="thumb-image" src="./images/port/img-1.jpeg" alt="игра в баскетбол">
+                                    <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="thumb-text">
                                     <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                                     <p>Дизайн</p>
@@ -79,8 +85,11 @@
                             </a>
                         </li>
                         <li class="thumb">
-                            <a href="" class="thumb-link link"><img class="thumb-image" src="./images/port/img-2.jpeg" alt="логотип рыбного ресторана">
-                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            <a href="" class="thumb-link link">
+                                <div class="thumb-box">
+                                    <img class="thumb-image" src="./images/port/img-2.jpeg" alt="логотип рыбного ресторана">
+                                    <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="thumb-text">
                                     <h3>Ресторан <span lang="en">Seafood</span></h3>
                                     <p>Приложение</p>
@@ -88,8 +97,11 @@
                             </a>
                         </li>
                         <li class="thumb">
-                            <a href="" class="thumb-link link"><img class="thumb-image" src="./images/port/img-3.jpeg" alt="наушники">
-                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            <a href="" class="thumb-link link">
+                                <div class="thumb-box">
+                                    <img class="thumb-image" src="./images/port/img-3.jpeg" alt="наушники">
+                                    <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="thumb-text">
                                     <h3>Проект <span lang="en">Prime</span></h3>
                                     <p>Маркетинг</p>
@@ -97,8 +109,11 @@
                             </a>
                         </li>
                         <li class="thumb">
-                            <a href="" class="thumb-link link"><img class="thumb-image" src="./images/port/img-4.jpeg" alt="коробки">
-                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            <a href="" class="thumb-link link">
+                                <div class="thumb-box">
+                                    <img class="thumb-image" src="./images/port/img-4.jpeg" alt="коробки">
+                                    <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="thumb-text">
                                     <h3>Проект <span lang="en">Boxes</span></h3>
                                     <p>Приложение</p>
@@ -106,8 +121,11 @@
                             </a>
                         </li>
                         <li class="thumb">
-                            <a href="" class="thumb-link link"><img class="thumb-image" src="./images/port/img-5.jpeg" alt="монитор">
-                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            <a href="" class="thumb-link link">
+                                <div class="thumb-box">
+                                    <img class="thumb-image" src="./images/port/img-5.jpeg" alt="монитор">
+                                    <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="thumb-text">
                                     <h3><span lang="en">Inspiration has no Borders</span></h3>
                                     <p>Веб-сайт</p>
@@ -115,8 +133,11 @@
                             </a>
                         </li>
                         <li class="thumb">
-                            <a href="" class="thumb-link link"><img class="thumb-image" src="./images/port/img-6.jpeg" alt="журнал">
-                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            <a href="" class="thumb-link link">
+                                <div class="thumb-box">
+                                    <img class="thumb-image" src="./images/port/img-6.jpeg" alt="журнал">
+                                    <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="thumb-text">
                                     <h3>Издание <span lang="en">Limited Edition</span></h3>
                                     <p>Дизайн</p>
@@ -124,8 +145,11 @@
                             </a>
                         </li>
                         <li class="thumb">
-                            <a href="" class="thumb-link link"><img class="thumb-image" src="./images/port/img-7.jpeg" alt="этикетка">
-                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            <a href="" class="thumb-link link">
+                                <div class="thumb-box">
+                                    <img class="thumb-image" src="./images/port/img-7.jpeg" alt="этикетка">
+                                    <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="thumb-text">
                                     <h3>Постер <span lang="en">LAB</span></h3>
                                     <p>Маркетинг</p>
@@ -133,8 +157,12 @@
                             </a>
                         </li>
                         <li class="thumb">
-                            <a href="" class="thumb-link link"><img class="thumb-image" src="./images/port/img-8.jpeg" alt="лэптоп">
-                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            <a href="" class="thumb-link link">
+                                <div class="thumb-box">
+                                    <img class="thumb-image" src="./images/port/img-8.jpeg" alt="лэптоп">
+                                    <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                                
                                 <div class="thumb-text">
                                     <h3><span lang="en">Growing Business</span></h3>
                                     <p>Приложение</p>
