--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <li class="methods-list-item">
                             <div class="box-icon-methods">
                                 <svg class="icon-methods">
-                                    <use href="./images/icons.svg#icon-antenna"></use>
+                                    <use href="./images/icons.svg#icon-antenna-1"></use>
                                 </svg>
                             </div>
                             <h3 class="methods-list-item-title">Внимание к деталям</h3>
@@ -366,15 +366,14 @@
         </div>
     </footer>
 
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal" data-modal-close>
-            <button type="button" class="close-btn">X
-                <!-- <svg>
-                </svg> -->
+            <button type="button" class="close-btn">
+                <svg class="icon-close-btn" width=18px height=18px>
+                    <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+                </svg>
             </button>
-
         </div>
-
     </div>
     <script src="./js/modal.js"></script>
 </body>
